fix workflow (maybe)

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,4 @@ jobs:
         run: ./build.sh
 
       - name: Run
-        run: |
-          cp .valeryrc ~
-          ./valery
+        run: ./valery --help
