--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-12]
-        cc: [gcc, clang]
+        cc: [gcc]
     runs-on: ${{matrix.os}}
     steps:
       - name: Checkout
@@ -22,7 +22,7 @@ jobs:
       - name: Test   
         if: startswith(matrix.os, 'ubuntu-')
         run: |
-          ./build.sh test
+          ./build.sh debug
           ./tests/memory_leak_test.sh
 
       - name: Build
