--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Test   
         if: startswith(matrix.os, 'ubuntu-')
         run: |
+          cp .valeryc ~/
           ./build.sh debug
           ./tests/memory_leak_test.sh
 
