feat: added -c option, test to find memory leaks and fixed all memory leaks (#64)
Fixed a couple of memory leaks:

- opendir() was called, but if it failed, closedir() was never actually called
- previously the str pointer in token_t could be incremented to ignore whitespace. This would result in an error when trying to free the memory as the pointer did not always point to the beginning of the memory block.
- previously allocated space for the hist file pointer on the heap, but never actually freed it, only called fclose(). Instead, do not allocate it on the heap as it is not necessary.
- forgot to free tokenized_str_t at the end of the program. LOL

* added memory leak test

* make github actions run test

* added -c arg

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-12]
-        cc: [gcc, clang]
+        cc: [gcc]
     runs-on: ${{matrix.os}}
     steps:
       - name: Checkout
@@ -15,7 +15,16 @@ jobs:
 
       - name: Dependencies
         if: startswith(matrix.os, 'ubuntu-')
-        run: sudo apt-get update -qyy
+        run: |
+          sudo apt-get update -qyy
+          sudo apt-get install valgrind
+
+      - name: Test   
+        if: startswith(matrix.os, 'ubuntu-')
+        run: |
+          cp .valeryrc ~/
+          ./build.sh debug
+          ./tests/memory_leak_test.sh
 
       - name: Build
         run: ./build.sh
