--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
         if: startswith(matrix.os, 'ubuntu-')
         run: |
           cp .valeryrc ~/
-          ./tests/memory_leak_test.sh
+          ./test/memory_leak_test.sh
 
       - name: Run
         run: ./valery --help
