--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+# ignore object files, binaries and caches
 *.out
+obj/
+.cache/*
+
+# used for enhanced development
 tags
 compile_commands.json
-.cache/*
+
+# ignore compiled, binary, but not src folder
 valery
 !src/valery
 
