feat: Add Makefile (#87)
* added makefile

* use makefile in github actions

* removed build.sh (old build script)

* update README

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,13 +20,11 @@ jobs:
           sudo apt-get install valgrind
 
       - name: Build
-        run: ./build.sh debug
+        run: make debug
 
       - name: Test   
         if: startswith(matrix.os, 'ubuntu-')
-        run: |
-          cp .valeryrc ~/
-          ./test/memory_leak_test.sh
+        run: ./test/memory_leak_test.sh
 
       - name: Run
-        run: ./valery --help
+        run: ./valery -c "ls -la | wc -l"
