disable gh workflows

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,32 +1,32 @@
-name: valery build
-on: [push, pull_request]
-
-jobs:
-  build:
-    name: Build
-    strategy:
-      matrix:
-        os: [ubuntu-20.04, macos-12]
-        cc: [gcc]
-    runs-on: ${{matrix.os}}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Dependencies
-        if: startswith(matrix.os, 'ubuntu-')
-        run: |
-          sudo apt-get update -qyy
-          sudo apt-get install valgrind
-
-      - name: Build
-        run: make debug
-
-      - name: Test   
-        if: startswith(matrix.os, 'ubuntu-')
-        run: ./test/memory_leak_test.sh
-
-      - name: Run
-        run: ./valery -c "ls -la | wc -l"
+#name: valery build
+#on: [push, pull_request]
+#
+#jobs:
+#  build:
+#    name: Build
+#    strategy:
+#      matrix:
+#        os: [ubuntu-20.04, macos-12]
+#        cc: [gcc]
+#    runs-on: ${{matrix.os}}
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#        with:
+#          submodules: recursive
+#
+#      - name: Dependencies
+#        if: startswith(matrix.os, 'ubuntu-')
+#        run: |
+#          sudo apt-get update -qyy
+#          sudo apt-get install valgrind
+#
+#      - name: Build
+#        run: make debug
+#
+#      - name: Test   
+#        if: startswith(matrix.os, 'ubuntu-')
+#        run: ./test/memory_leak_test.sh
+#
+#      - name: Run
+#        run: ./valery -c "ls -la | wc -l"
