--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,8 @@
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v2
+#        with:
+#          submodules: recursive
 #
 #      - name: Dependencies
 #        if: startswith(matrix.os, 'ubuntu-')
