--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "nicc"]
 	path = nicc
 	url = git@github.com:LytixDev/nicc.git
+[submodule "include/lib/sac"]
+	path = include/lib/sac
+	url = git@github.com:LytixDev/sac.git
+[submodule "include/lib/nicc"]
+	path = include/lib/nicc
+	url = git@github.com:LytixDev/nicc.git
